syntax = "proto3";
package cosmossdkgridnode.gridnode;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/unigrid-project/cosmos-sdk-gridnode/x/gridnode/types";

// Query defines the gRPC querier service for gridnode module.
service Query {
  // DelegatedAmount queries the amount delegated by a specific account.
  rpc DelegatedAmount(QueryDelegatedAmountRequest) returns (QueryDelegatedAmountResponse) {
    option (google.api.http).get = "/unigrid-project/cosmos-sdk-gridnode/gridnode/delegated-amount/{delegator_address}";
  }
}

// QueryDelegatedAmountRequest is the request type for the Query/DelegatedAmount RPC method.
message QueryDelegatedAmountRequest {
  string delegator_address = 1;
}

// QueryDelegatedAmountResponse is the response type for the Query/DelegatedAmount RPC method.
message QueryDelegatedAmountResponse {
  int64 amount = 1;
}

message Delegation {
  string delegator_address = 1;
  int64 amount = 2;
}